# proyecto-titulo-grupo-3

./: README.md
backend/: .env.test  .env.test_template  .gitignore  Camas NWP1 24-09-2025 1235.xlsx  Dockerfile.API  Dockerfile.postgress_test  README.md  apply_migration.py  check_migration.py  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  prediction_results.json  pyproject.toml
backend/.cursor/rules/: no-files-to-explain-behaviour.mdc
backend/.github/workflows/: ci.yml
backend/alembic/: env.py
backend/alembic/versions/: 0f72d9b4974b_add_social_score_history_table.py  178a1c94d141_add_grd_norms_table.py  394571d76d3a_add_task_status_history_table.py  508c5aec91ad_add_clinical_episodes_table.py  695374c6e40f_add_patient_information_table.py  8b30d4d51114_add_task_instances_table.py  8dd25d0a2b3a_create_patients_table.py  8f880ba9d280_add_patient_documents_table_and_update_.py  98694da00aa6_add_episode_documents_table.py  a1e6596d27b1_add_server_defaults_to_patients_created_.py  a5b6c7d8e9f0_add_grd_name_to_clinical_episode.py  a978d460e6cf_add_episode_identifier_to_clinical_.py  b27a05b3af7d_add_beds_table.py  b32340fbec94_add_clinical_episode_information_table.py  bc6231949f83_add_episode_identifier_to_clinical_.py  bf1de3e8398f_add_room_column_to_bed.py  c2a8f3e5d9b1_add_no_score_reason_to_social_score.py  dcbdfe2fa8e2_make_task_description_nullable.py  e1a2b3c4d5e6_add_overstay_and_grd_fields.py  ecf1bf12fedd_add_task_definitions_table.py  eda241cfccf9_create_patients_table.py  f3a9c7e2d1b4_add_grd_expected_days_to_clinical_episode.py  g4b5c8d2e1f3_add_workers_table_and_assigned_to.py  h5c6d9e3f2a4_add_alerts_table.py  i6d7e0f4a5b6_merge_alerts_and_overstay_branches.py
backend/app/: db.py  deps.py  excel_uploader.py  main.py
backend/app/models/: __init__.py  alert.py  bed.py  clinical_episode.py  clinical_episode_information.py  episode_document.py  grd_norm.py  patient.py  patient_document.py  patient_information.py  social_score_history.py  task_definition.py  task_instance.py  task_status_history.py  worker.py
backend/app/routers/: alerts.py  clinical_episodes.py  documents.py  (+5 more)
backend/scripts/: README_seed.md  database_functions.py  dev.py
backend/tests/: conftest.py  test_fixtures.py
(+57 files in other folders)
