[project]
name = "backend"
version = "0.1.0"
description = "FastAPI hello world service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "sqlalchemy[asyncio]>=2.0.44",
    "uvicorn[standard]",
]

[project.scripts]
# api
dev = "scripts.dev:main"
# database
db-seed = "scripts.database_functions:seed"
db-reset = "scripts.database_functions:reset"
db-clear = "scripts.database_functions:clear"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = ["app", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]

